// Protobuf version spec.
syntax = "proto3";

import "memory_message.proto";

option go_package = "proto;pb";

option java_package = "br.com.rodrigodonizettio.pcbook.pb";
option java_multiple_files = true;

// message <NameOfTheMessage>
message Cpu {
  // <data-type> name_of_field = tag_number
  string brand = 1;
  string name = 2;
  uint32 number_cores = 8;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

//As we have 2 message declared he so far, this file is called "Multi-Message" file
message Gpu {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}